<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin">

    <View
        android:id="@+id/containerComponents"
        style="@style/container_components"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <View
        android:id="@+id/Avalid"
        style="@style/container_avalid"
        android:layout_width="331dp"
        android:layout_height="126dp"
        app:layout_constraintBottom_toBottomOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_text"
        android:layout_marginTop="220dp"
        android:hint="@string/hint_email"
        android:drawableEnd="@drawable/email_icon"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/edit_text"
        android:drawableEnd="@drawable/eye"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_acesso"
        style="@style/button"
        android:layout_width="302dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/acessar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Principal"
        app:layout_constraintStart_toStartOf="@id/Avalid"
        app:layout_constraintEnd_toEndOf="@id/Avalid"
        app:layout_constraintTop_toTopOf="@id/Avalid"
        app:layout_constraintBottom_toBottomOf="@id/Avalid" />

</androidx.constraintlayout.widget.ConstraintLayout>