<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".criarAvaliacao">

    <!-- ScrollView que envolve o conteúdo que deve ser rolável -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_enviar_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/Topo"
                style="@style/topo"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/Principal"
                app:layout_constraintBottom_toBottomOf="@id/Topo"
                app:layout_constraintEnd_toEndOf="@id/Topo"
                app:layout_constraintStart_toStartOf="@id/Topo"
                app:layout_constraintTop_toTopOf="@id/Topo" />

            <TextView
                android:id="@+id/txt_titulo_form"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="55dp"
                android:text="@string/txtcriarform"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="38dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Topo"
                tools:ignore="MissingConstraints" />

            <LinearLayout

                android:id="@+id/layout_titulo"
                android:layout_width="411dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txt_titulo_form"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/editTextTitulo"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/campo_form"
                    android:hint="@string/definetitulo"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/txt_titulo_form" />

                <ImageView
                    android:id="@+id/imageViewVerificarTitulo"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/verificar" />

                <ImageView
                    android:id="@+id/imageViewApagarTitulo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/apagar" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/layout_perguntas_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_titulo" />



            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="Data:"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_perguntas_container" />


            <TextView
                android:id="@+id/textViewDataSelecionada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/campo_form"
                android:padding="10dp"
                android:text="Selecione uma data"
                app:layout_constraintStart_toEndOf="@id/data"
                app:layout_constraintTop_toBottomOf="@+id/layout_perguntas_container" />

            <LinearLayout
                android:id="@+id/layout_adicionar_apagar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/data"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/Adicionar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="150dp"
                    android:src="@drawable/adicionar" />

                <ImageView
                    android:id="@+id/Remover"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/remover" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <!-- Botão "Enviar Formulário" fixo na parte inferior -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enviar_form"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btnenviar"
        android:gravity="center"
        android:text="@string/enviarform"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
