<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <View
        android:id="@+id/Topo"
        style="@style/topo"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="56dp"
        app:shapeAppearanceOverlay="@style/circular"
        android:layout_height="56dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_user"
        app:layout_constraintBottom_toBottomOf="@id/icon_profile"
        app:layout_constraintEnd_toEndOf="@id/icon_profile"
        app:layout_constraintStart_toStartOf="@id/icon_profile"
        app:layout_constraintTop_toTopOf="@id/icon_profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/icon_profile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="Sanofi"
        app:layout_constraintBottom_toBottomOf="@id/Topo"
        app:layout_constraintEnd_toEndOf="@id/Topo"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="@id/Topo"
        app:layout_constraintTop_toTopOf="@id/Topo"
        app:layout_constraintVertical_bias="0.533" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Topo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">


        <Button
            android:id="@+id/view_Formulario"
            style="@style/Formulario"
            app:layout_constraintEnd_toStartOf="@id/view_Avisos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_Horarios"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/texto_formulario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="@+id/view_Formulario"
            android:padding="8dp"
            android:text="@string/form_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view_Formulario"
            app:layout_constraintStart_toEndOf="@+id/view_Formulario"
            app:layout_constraintTop_toTopOf="@id/view_Formulario" />

        <ImageView

            android:id="@+id/image_formulario"
            style="@style/gestor"
            android:src="@drawable/icon_form"
            app:layout_constraintBottom_toBottomOf="@id/view_Formulario"
            app:layout_constraintEnd_toEndOf="@id/view_Formulario"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="@id/view_Formulario"
            app:layout_constraintTop_toTopOf="@id/view_Formulario"
            app:layout_constraintVertical_bias="0.566" />


        <View
            android:id="@+id/view_Avisos"
            style="@style/Formulario2"
            app:layout_constraintStart_toEndOf="@id/view_Formulario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_Gestor"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/image_formulario2"
            style="@style/gestor"
            android:src="@drawable/alert"
            app:layout_constraintBottom_toBottomOf="@id/view_Avisos"
            app:layout_constraintEnd_toEndOf="@id/view_Avisos"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/view_Avisos"
            app:layout_constraintTop_toTopOf="@id/view_Avisos"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/view_Avisos"
            android:padding="8dp"
            android:text="@string/avisos_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view_Avisos"
            app:layout_constraintTop_toTopOf="@id/view_Avisos" />

        <Button
            android:id="@+id/view_Horarios"
            style="@style/Formulario"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_Gestor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_Formulario" />

        <ImageView
            android:id="@+id/image_formulario3"
            style="@style/gestor"
            android:layout_width="130dp"
            android:layout_height="131dp"
            android:src="@drawable/bus"
            app:layout_constraintBottom_toBottomOf="@id/view_Horarios"
            app:layout_constraintEnd_toEndOf="@id/view_Horarios"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/view_Horarios"
            app:layout_constraintTop_toTopOf="@id/view_Horarios"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/view_Horarios"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/hora_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view_Horarios"

            app:layout_constraintTop_toTopOf="@id/view_Horarios" />



        <Button
            android:id="@+id/view_Gestor"
            style="@style/Formulario2"
            app:layout_constraintTop_toBottomOf="@id/view_Avisos"
            app:layout_constraintStart_toEndOf="@id/view_Horarios"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp" />

        <ImageView
            android:id="@+id/image_formulario4"
            style="@style/gestor"
            android:src="@drawable/icon_gestor"
            app:layout_constraintBottom_toBottomOf="@id/view_Gestor"
            app:layout_constraintEnd_toEndOf="@id/view_Gestor"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/view_Gestor"
            app:layout_constraintTop_toTopOf="@id/view_Gestor"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/texto_formulario4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/view_Gestor"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/gestor_txt"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view_Gestor"
            app:layout_constraintTop_toTopOf="@id/view_Gestor"

            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
